<resources>
    <string name="app_name">APeoplesMapofCorvallisApp</string>
    <string name="title_activity_map_selector">AreaMap</string>
    <string name="title_welcome">Welcome</string>
    <string name="welcome_tit">Welcome to the Peoples Map of Corvallis</string>
    <string name="welcome_text">This app is create with you in mind. Come join us in creating the world we see around us.</string>
    <string name="btn_cont">Contribute</string>
    <string name="btn_look">Just Look</string>
    <string name="btn_abt">About</string>
    <string name="btn_audio">Audio</string>
    <string name="btn_video">Video</string>
    <string name="btn_pic"></string>
    <string name="cont_text"></string>
    <string name="tmp">temp</string>
    <string name="nothing">nothing</string>
    <string name="app_start">The App is Starting…</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
