<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_text"
        android:text="@string/welcome_tit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_text"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.84" />

    <Button
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_contribute"
        android:text="@string/btn_cont" />

    <Button
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_look"
        android:id="@+id/btn_jslk" />

    <Button
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_abt"
        android:id="@+id/btn_about"
        android:onClick="sendMessage"/>

</LinearLayout>
