<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cont_text"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:textAlignment="center" />

    <Button
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_pic"
        android:id="@+id/@+id/btn_pic"
        android:layout_gravity="center_horizontal" />

    <Button
        android:text="@string/btn_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_weight="0.05" />

    <Button
        android:text="@string/btn_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_weight="0.05" />
</LinearLayout>

